Quick fix: Assign a pointer to the parent in the CalSettings::instance() method. This way the singleton class will be destroyed when the calendar wizard is closed.

BUG: 220800